--- a/HWMonitor/AppController.xib
+++ b/HWMonitor/AppController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8121.17"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9531"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AppController">
@@ -20,7 +20,7 @@
             <windowCollectionBehavior key="collectionBehavior" moveToActiveSpace="YES" participatesInCycle="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="626" y="336" width="600" height="559"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1577"/>
             <view key="contentView" id="266">
                 <rect key="frame" x="0.0" y="0.0" width="600" height="559"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -68,7 +68,7 @@
         </window>
         <customObject id="265" customClass="LaunchAtLoginController"/>
         <numberFormatter formatterBehavior="custom10_4" positiveFormat="#,##0.0##" negativeFormat="#,##0.0##" numberStyle="decimal" paddingCharacter="*" secondaryGroupingSize="1" minimumIntegerDigits="1" maximumIntegerDigits="309" minimumFractionDigits="1" maximumFractionDigits="3" decimalSeparator="." groupingSeparator="," currencyDecimalSeparator="." plusSign="+" minusSign="-" notANumberSymbol="NaN" perMillSymbol="‰" percentSymbol="%" exponentSymbol="E" positivePrefix="x " positiveSuffix="" negativePrefix="x -" negativeSuffix="" id="620" userLabel="Graphs Scale Formatter"/>
-        <view id="2wX-b3-awf" userLabel="General View">
+        <view misplaced="YES" id="2wX-b3-awf" userLabel="General View">
             <rect key="frame" x="0.0" y="0.0" width="550" height="421"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -84,7 +84,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <matrix verticalHuggingPriority="750" allowsEmptySelection="NO" autosizesCells="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eN7-c7-Y6I">
+                <matrix verticalHuggingPriority="750" misplaced="YES" allowsEmptySelection="NO" autosizesCells="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eN7-c7-Y6I">
                     <rect key="frame" x="162" y="351" width="368" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" priority="731" constant="368" id="0XH-wl-ac8"/>
@@ -120,7 +120,7 @@
                         </column>
                     </cells>
                 </matrix>
-                <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="67I-pQ-71H">
+                <slider verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="67I-pQ-71H">
                     <rect key="frame" x="34" y="271" width="482" height="27"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="Ixi-pU-KIg"/>
@@ -150,7 +150,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oV0-8W-hgL">
+                <slider verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oV0-8W-hgL">
                     <rect key="frame" x="34" y="174" width="482" height="27"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="aMe-Nu-kng"/>
@@ -180,7 +180,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button translatesAutoresizingMaskIntoConstraints="NO" id="mRl-Hy-jkT">
+                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mRl-Hy-jkT">
                     <rect key="frame" x="24" y="18" width="502" height="18"/>
                     <constraints>
                         <constraint firstAttribute="width" priority="730" constant="498" id="DZc-WZ-lXk"/>
@@ -201,13 +201,13 @@
                         </binding>
                     </connections>
                 </button>
-                <button translatesAutoresizingMaskIntoConstraints="NO" id="eDP-T5-3N4">
+                <button hidden="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eDP-T5-3N4">
                     <rect key="frame" x="24" y="43" width="502" height="18"/>
                     <constraints>
                         <constraint firstAttribute="width" priority="730" constant="498" id="18e-eb-M5L"/>
                         <constraint firstAttribute="height" constant="14" id="wPu-W7-zeK"/>
                     </constraints>
-                    <buttonCell key="cell" type="check" title="Check for updates" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="ZMn-Zm-T3E">
+                    <buttonCell key="cell" type="check" title="Check for updates" bezelStyle="regularSquare" imagePosition="left" enabled="NO" inset="2" id="ZMn-Zm-T3E">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -223,7 +223,7 @@
                         </binding>
                     </connections>
                 </button>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dIQ-rm-6cs">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dIQ-rm-6cs">
                     <rect key="frame" x="160" y="304" width="38" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Label" id="jRA-9e-Iea">
                         <font key="font" metaFont="system"/>
@@ -234,7 +234,7 @@
                         <binding destination="-2" name="value" keyPath="self.monitorEngine.configuration.smcSensorsUpdateRate" id="VhG-Pw-c54"/>
                     </connections>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eWb-eM-oNW">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eWb-eM-oNW">
                     <rect key="frame" x="176" y="207" width="38" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Label" id="SMU-br-EzO">
                         <font key="font" metaFont="system"/>
@@ -245,7 +245,7 @@
                         <binding destination="-2" name="value" keyPath="self.monitorEngine.configuration.smartSensorsUpdateRate" id="VJ2-gy-R7p"/>
                     </connections>
                 </textField>
-                <button translatesAutoresizingMaskIntoConstraints="NO" id="kBG-ob-KSv">
+                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kBG-ob-KSv">
                     <rect key="frame" x="24" y="111" width="502" height="18"/>
                     <constraints>
                         <constraint firstAttribute="width" priority="730" constant="498" id="h5u-5R-UVn"/>
@@ -259,7 +259,7 @@
                         <binding destination="-2" name="value" keyPath="self.monitorEngine.configuration.notifyAlarmLevelChanges" id="MV7-Ok-9qu"/>
                     </connections>
                 </button>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6S5-5F-k5u">
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6S5-5F-k5u">
                     <rect key="frame" x="18" y="85" width="514" height="2"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="2" id="0fG-X8-Wte"/>
@@ -267,7 +267,7 @@
                     </constraints>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="axesIndependently" image="Divider" id="RrS-yU-3IQ"/>
                 </imageView>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ry2-cZ-qcA">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ry2-cZ-qcA">
                     <rect key="frame" x="36" y="250" width="11" height="14"/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="1" id="QRV-QA-mJD">
                         <font key="font" metaFont="smallSystem"/>
@@ -1484,7 +1484,7 @@
                                                 <rect key="frame" x="2" y="2" width="244" height="97"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
-                                                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="OuI-bb-o4M">
+                                                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" preferredMaxLayoutWidth="90" translatesAutoresizingMaskIntoConstraints="NO" id="OuI-bb-o4M">
                                                         <rect key="frame" x="149" y="40" width="94" height="17"/>
                                                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Table View Cell" id="GcC-Pr-8cd">
                                                             <font key="font" metaFont="system"/>
@@ -1709,11 +1709,11 @@
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
         </view>
-        <view misplaced="YES" id="0i6-hZ-Q6v" userLabel="Graphs View">
+        <view id="0i6-hZ-Q6v" userLabel="Graphs View">
             <rect key="frame" x="0.0" y="0.0" width="500" height="236"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bua-sr-zup">
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="bua-sr-zup">
                     <rect key="frame" x="25" y="182" width="448" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="14" id="P1K-9I-OHe"/>
@@ -1734,7 +1734,7 @@
                         </binding>
                     </connections>
                 </button>
-                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RWJ-wR-9pf">
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="RWJ-wR-9pf">
                     <rect key="frame" x="25" y="157" width="448" height="18"/>
                     <constraints>
                         <constraint firstAttribute="width" priority="730" constant="293" id="VPU-Y8-hzR"/>
@@ -1755,7 +1755,7 @@
                         </binding>
                     </connections>
                 </button>
-                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lvv-Gq-7DT">
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="Lvv-Gq-7DT">
                     <rect key="frame" x="25" y="132" width="448" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="14" id="6ny-oR-Oa0"/>
@@ -1776,7 +1776,7 @@
                         </binding>
                     </connections>
                 </button>
-                <textField verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rfX-Mg-n1n">
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rfX-Mg-n1n">
                     <rect key="frame" x="27" y="61" width="404" height="17"/>
                     <constraints>
                         <constraint firstAttribute="width" priority="730" constant="400" id="L1k-d1-cs7"/>
@@ -1788,7 +1788,7 @@
                     </textFieldCell>
                 </textField>
                 <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3vW-CP-GIC">
-                    <rect key="frame" x="25" y="27" width="450" height="25"/>
+                    <rect key="frame" x="25" y="27" width="450" height="26"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="446" id="Awh-UA-ZVa"/>
                     </constraints>
@@ -1804,7 +1804,7 @@
                         </binding>
                     </connections>
                 </slider>
-                <textField verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rfb-w2-8ol">
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rfb-w2-8ol">
                     <rect key="frame" x="435" y="61" width="38" height="17"/>
                     <constraints>
                         <constraint firstAttribute="width" priority="730" constant="34" id="7v0-3W-bhM"/>
@@ -1826,7 +1826,7 @@
                         <outlet property="formatter" destination="620" id="28e-tL-KH5"/>
                     </connections>
                 </textField>
-                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="027-Ai-eda">
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="027-Ai-eda">
                     <rect key="frame" x="25" y="107" width="448" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="14" id="XQY-fV-vXw"/>
